<resources>
    <string name="app_name">Project Manager</string>
    <string name="image_contentDescription">image</string>
    <string name="letsGetStartedText">Let\'s Get Started!!</string>
    <string name="introTextDescription">Collaborate and Plan Together Across Multiple Devices on Project Manager\'s Minimalist Interface</string>
    <string name="signIn">SIGN IN</string>
    <string name="signUp">SIGN UP</string>

    <string name="singUp_description_text">Enter your name, email address and password to set up your account</string>
    <string name="singIn_description_text">Enter your email address and password to log in to your account</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="clickBackToExit">Please click Back again to Exit</string>
    <string name="pleaseWait">Please Wait…</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="myProfile">My Profile</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>

    <string name="no_boards_available">No Boards are available!!!</string>


    <string name="action_add_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_list">Add List</string>

    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>

    <string name="delete_card">Delete Card</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="str_select_label_color">Select Label Color</string>
    <string name="str_select_member">Select Member</string>
    <string name="default_notification_channel_id">projectmanager_notification_channel_id</string>
</resources>