<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_background"
    tools:context=".activities.SignInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_signIn"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/signIn"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/signUpScreen_toolbar_textSize"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/authenticationScreen_content_marginTop"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authenticationScreen_marginStartEnd"
            android:layout_marginEnd="@dimen/authenticationScreen_marginStartEnd"
            android:gravity="center"
            android:text="@string/singIn_description_text"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/authenticationScreen_description_textSize" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authenticationScreen_marginStartEnd"
            android:layout_marginTop="@dimen/authenticationScreen_cardView_marginTop"
            android:layout_marginEnd="@dimen/authenticationScreen_marginStartEnd"
            android:elevation="@dimen/cardView_elevation"
            app:cardCornerRadius="@dimen/cardView_cornerRadius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/cardViewlayout_contentPadding">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authenticationScreen_til_marginStartEnd"
                    android:layout_marginEnd="@dimen/authenticationScreen_til_marginStartEnd">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email_signIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/et_textSize" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/authenticationScreen_til_marginStartEnd"
                    android:layout_marginEnd="@dimen/authenticationScreen_til_marginStartEnd">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password_signIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/et_textSize" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_signIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/btn_marginStartEnd"
                    android:layout_marginTop="@dimen/btn_marginTop"
                    android:layout_marginEnd="@dimen/btn_marginStartEnd"
                    android:background="@drawable/shape_button_rounded"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTop"
                    android:paddingBottom="@dimen/btn_paddingBottom"
                    android:text="@string/signIn"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn_textSize" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>